fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -85,7 +85,7 @@
     } 
 
     .projectEle {
-       display: block;
+       display: inline;
     }
 
     .projectEle:nth-child(1) {
